# ksp_2d

./: CMakeLists.txt  LICENSE  README.md
CPPCW4Files/: CMakeLists_original.txt  version.txt
CPPCW4Files/Debug/: BasicSpacecraft.sbr  CelestialBody.sbr  DisplayableObject.sbr  FontManager.sbr  KSP2D.sbr  KSPMetaManager.sbr  PartSprite.sbr  PhysObject.sbr  PlanetObject.sbr  RawImage.sbr  RocketPart.sbr  SDL2_framerate.sbr  SDL2_gfxPrimitives.sbr  SDL2_imageFilter.sbr  SDL2_rotozoom.sbr  SimpleImage.sbr  Spacecraft.sbr  SpacecraftControls.sbr  SpacecraftParts.sbr  TileManager.sbr  main.sbr
CPPCW4Files/SDL2_gfx/: SDL2_framerate.c  SDL2_gfxPrimitives.c  SDL2_imageFilter.c
CPPCW4Files/ksp2d_src/: KSP.h  KSP2D.cpp  KSP2D.h  KSPFilterPoints.h  main.cpp
CPPCW4Files/src/: BaseEngine.cpp  BaseEngine.h  BouncingBall.h  BouncingBallMain.cpp  BouncingBallMain.h  BouncingImageObject.h  BouncingObject.h  CardContainer.h  CardOrTile.h  CoordinateMapping.h  CourseworkBase.vcxproj  CourseworkBase.vcxproj.filters  DisplayableObject.h  DisplayableObjectContainer.h  DragableBaseClassObject.h  DragableImageObject.h  DragableObject.h  DragableToken.h  DragableTokenContainer.h  DraggingDemo.cpp  DrawingFilters.h  DrawingSurface.cpp  DrawingSurface.h  FilterPoints.h  Image2Old.h  ImageManager.h  ImageMappingDemo.cpp  ImageMappingDemo.h  ImageObject.h  ImageObjectDemo.cpp  ImageObjectDemo.h  JasonsDemoA.cpp  JasonsDemoA.h  JasonsObjectA.cpp  JasonsObjectA.h  JasonsTileManager.cpp  (+24 more)
CPPCoursework2020-v101/: CMakeLists.txt  README.TXT  version.txt
resources/: parts.json
sdl2_framework/: BaseEngine.cpp  BaseEngine.h  BouncingObject.h  CardContainer.h  CardOrTile.h  DisplayableObject.h  DragableImageObject.h  DragableObject.h  DragableTokenContainer.h  DrawingSurface.cpp  FilterPoints.h  FontManager.cpp  MovementPosition.h  RawImage.cpp  RawImage.h  SimpleDemo.cpp  SimpleDemo.h  SimpleImage.cpp  SimpleImage.h  TileManager.cpp  header.h
src/: KSP.h  KSP2D.cpp  KSP2D.h  KSPFilterPoints.h
(+216 files in other folders)
